gcc/testsuite/rust/rustc/ui/parser/issue-17904-2.rs
struct Bar<T> { x: T } where T: Copy // { dg-error "" "" { target *-*-* } }

fn main() {}

